logs/validate.20260408-011029.log
Mode: isolate
Isolate: including Chap18 Chap02
error: unexpected token, expected `;`
    --> src/Chap18/ArraySeqMtEphSlice.rs:1548:47
     |
1548 |                     0 <= i < right.len as int implies {
     |                                               ^^^^^^^

error[E0425]: cannot find type `ArraySeqMtEphSliceS` in this scope
    --> src/Chap18/ArraySeqMtEphSlice.rs:1780:50
     |
1780 |     impl<T: std::fmt::Debug> std::fmt::Debug for ArraySeqMtEphSliceS<T> {
     |                                                  ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphSliceS` in this scope
    --> src/Chap18/ArraySeqMtEphSlice.rs:1788:54
     |
1788 |     impl<T: std::fmt::Display> std::fmt::Display for ArraySeqMtEphSliceS<T> {
     |                                                      ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphSliceIter` in this scope
    --> src/Chap18/ArraySeqMtEphSlice.rs:1803:54
     |
1803 |     impl<'a, T: std::fmt::Debug> std::fmt::Debug for ArraySeqMtEphSliceIter<'a, T> {
     |                                                      ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphSliceIter` in this scope
    --> src/Chap18/ArraySeqMtEphSlice.rs:1809:39
     |
1809 |     impl<'a, T> std::fmt::Display for ArraySeqMtEphSliceIter<'a, T> {
     |                                       ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphSliceGhostIterator` in this scope
    --> src/Chap18/ArraySeqMtEphSlice.rs:1815:37
     |
1815 |     impl<'a, T> std::fmt::Debug for ArraySeqMtEphSliceGhostIterator<'a, T> {
     |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphSliceGhostIterator` in this scope
    --> src/Chap18/ArraySeqMtEphSlice.rs:1821:39
     |
1821 |     impl<'a, T> std::fmt::Display for ArraySeqMtEphSliceGhostIterator<'a, T> {
     |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 5603MB, peak z3 RSS: 289MB, min free: 20069MB
Sampled CPU Usage: rust_verify: 111s, z3 children: 99s
